# tile_plotter

./: .gitignore  __init__.py  axes_props.py  base_plotter.py  data_loaders.py  field_plotter.py  functions.py  geometry.py  handlers.py  line_plotter.py  logger.py  map_plotter.py  maths.py  mesh_plotter.py  multi_plotter.py  normalizations.py  plot_handler.py  plotter.py  pyproject.toml  slice_plotter.py  utils.py
configs/: default.cfg  example.cfg  map_default.cfg  plot_default.cfg
docs/: index.html  search.js  tile_plotter.html
docs/tile_plotter/: axes_props.html  base_plotter.html  common_types.html  data_loaders.html  geometry.html  handlers.html  logging_tools.html  map_plotter.html  multi_plotter.html  normalizations.html  plot_handler.html  plotter.html  utils.html
src/: slice_plotter.py
styles/: blue_border.mplstyle  bone.mplstyle  bone_r.mplstyle  bwr.mplstyle  grayscale.mplstyle  green_border.mplstyle  inferno.mplstyle  jet.mplstyle  maps.mplstyle  matplotlibrc  orange_border.mplstyle  paper.mplstyle  posterA0big.mplstyle  red_border.mplstyle  setsans.mplstyle  setserif.mplstyle  thick_border.mplstyle  viridis.mplstyle
tile_plotter/: __init__.py  axes_props.py  base_plotter.py  common_types.py  data_loaders.py  geometry.py  handlers.py  logging_tools.py  map_plotter.py  multi_plotter.py  plot_handler.py  plotter.py  spec_handler.py  utils.py
