[tool.poetry]
name = "tile-plotter"
version = "0.2.0"
description = "Tools for creating tile plots"
authors = ["Fernando Olguin <f.olguin.ch@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "tile_plotter"}]
include = ['config']

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
numpy = "^2.3"
matplotlib = "^3.8.3"
astropy = "^7.0.0"
radio-beam = "^0.3.4"
#configparseradv = {path = "../configparseradv"}
#toolkit = {path = "../toolkit"}
#configparseradv = {git = "https://github.com/folguinch/configparseradv"}
#toolkit = {git = "https://github.com/folguinch/toolkit.git"}
regions = "^0.10"
cmcrameri = "^1.5"

[tool.poetry.scripts]
plotter = 'tile_plotter.plotter:plotter'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
